--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -29,6 +29,8 @@ body {
   overflow-y                 : scroll;
   /* has to be scroll, not auto */
   -webkit-overflow-scrolling : touch;
+  background: #222 url(../images/bg_dark.jpg) no-repeat fixed;
+  background-size: cover;
 }
 
 // Hide empty paragraphs
