Content shaping and clean up

--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -1,3 +1,9 @@
 /*----------------------------------------------------------------------------
   Variables
 ----------------------------------------------------------------------------*/
+
+
+// Colors
+
+$lime: #aacf38;
+$charcoal: #323031;
