--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -33,8 +33,8 @@
 @import 'components/social-menu';
 @import 'components/leftside';
 @import 'components/panels';
-@import 'components/header';
-@import 'components/footer';
+//@import 'components/header';
+//@import 'components/footer';
 
 // Plugin Overrides
 @import 'plugins/overrides';
