--- a/assets/scss/components/_leftside.scss
+++ b/assets/scss/components/_leftside.scss
@@ -1,6 +1,7 @@
 .left--fixed {
 	position: fixed;
-	height: 100vh;
+	min-height:100%;
+	min-height: 100vh;
 	padding: 0 20px;
 	width: 32%;
 	text-align: center;
@@ -38,7 +39,8 @@
 
 .left--fixed {
 	position: fixed;
-	height: 100vh;
+	min-height:100%;
+	min-height: 100vh;
 	padding: 0 20px;
 	width: 100%;
 	text-align: center;
