--- a/assets/scss/components/_panels.scss
+++ b/assets/scss/components/_panels.scss
@@ -1,18 +1,19 @@
 .panel {
 	display: block;
-	height: 100vh;
-	padding: 20% 10%;
+	min-height: 100%;
+	min-height: 100vh;
+	padding: 15% 8%;
 	background-size: cover;
 }
 
 
 .panel--dark {
-	background: #222 url(../images/bg_dark.jpg) no-repeat;
+	background: $charcoal url(../images/bg_dark.jpg) no-repeat;
 	background-size: cover;
 }
 
 .panel--lime {
-	background: #9cce5b  url(../images/bg_lime.jpg) no-repeat;
+	background: $lime  url(../images/bg_lime.jpg) no-repeat;
 	background-size: cover;
 }
 
@@ -21,6 +22,14 @@
 	height: auto;
 	padding: 20% 10%;
 	background: #fff;
+}
+
+
+img.glitch {
+	margin: 0 auto 50px;
+	display: block;
+	width: 300px;
+	text-align: center;
 }
 
 
@@ -41,3 +50,30 @@
 		background-size: cover;
 	}
 }
+
+
+
+
+
+// Introduction Panel
+
+.intro p {
+	color: #fff;
+	font-size: 20px;
+}
+
+
+
+// Tickets Panel
+.tickets .text_earlybird {
+	margin-bottom: 15px;
+}
+
+.pricing-table .row {
+	margin: 0 0 5px;
+	padding: 0;}
+	
+.pricing-table p {
+	font-size: 0.95em;
+	margin: 0 0 3px;
+	}
