--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -24,7 +24,7 @@ html a {
 }
 
 body {
-  font                       : 100%/1.25 arial, helvetica, sans-serif;
+  font                       : 100%/1.25 'Roboto Condensed', arial, helvetica, sans-serif;
   min-height                 : 100%;
   overflow-y                 : scroll;
   /* has to be scroll, not auto */
