Final content entry and prep for alpha.

--- a/assets/scss/components/_panels.scss
+++ b/assets/scss/components/_panels.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------
+  Core Home Panels
+----------------------------------------------------------------------------*/
+
 .panel {
 	display: block;
 	min-height: 100%;
@@ -55,7 +59,9 @@ img.glitch {
 
 
 
-// Introduction Panel
+/*----------------------------------------------------------------------------
+  Introduction
+----------------------------------------------------------------------------*/
 
 .intro p {
 	color: #fff;
@@ -64,16 +70,61 @@ img.glitch {
 
 
 
-// Tickets Panel
+
+
+/*----------------------------------------------------------------------------
+  Tickets
+----------------------------------------------------------------------------*/
 .tickets .text_earlybird {
 	margin-bottom: 15px;
 }
 
 .pricing-table .row {
 	margin: 0 0 5px;
-	padding: 0;}
+	padding: 0;
+	
+	.col-5 {padding-left: 0px;}
+	}
 	
 .pricing-table p {
 	font-size: 0.95em;
 	margin: 0 0 3px;
 	}
+	
+	
+	
+
+/*----------------------------------------------------------------------------
+  Email Sign up
+----------------------------------------------------------------------------*/
+
+.email form {
+	width: 100%;
+	text-align: left;
+	display: block;
+	
+	input.email {
+		text-align: left;
+		width: 100%;
+		padding: 15px;
+		background: none;
+		border: 0px;
+		border-bottom: 2px $charcoal solid;
+	}
+}
+
+
+
+/*----------------------------------------------------------------------------
+  Speakers
+----------------------------------------------------------------------------*/
+
+.speakers h2 {
+	color: #fff;
+}
+
+.speakers p {
+	color: #fff;
+	font-size: 20px;
+}
+
