--- a/assets/scss/globals/_typography.scss
+++ b/assets/scss/globals/_typography.scss
@@ -8,3 +8,16 @@ a:visited {
   text-decoration : none;
 }
 
+
+
+.text-lime {
+	color: $lime;
+}
+
+
+
+
+h2 {
+	font-size: 3em;
+	text-transform: uppercase;
+}
