--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -33,6 +33,13 @@ body {
   background-size: cover;
 }
 
+
+@media screen and (max-width: $small-breakpoint) {
+	body {
+		background-size: 500px 1000px;
+		}
+	}
+
 // Hide empty paragraphs
 p:empty{
   display: none !important;
