Simple name change for the theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: phxdw17
+Theme Name: phx design week 2017 - full
 Theme URI: http://phoenixdesignweek.com
 Author: Factor1
 Author URI: https://factor1studios.com
