--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -7,6 +7,7 @@
 
 $lime: #aacf38;
 $charcoal: #323031;
+$charcoal-bg: $charcoal url(../images/bg_dark.jpg) no-repeat fixed;
 
 // Fonts
 $roboto: 'Roboto Condensed';
