--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -33,7 +33,8 @@
 @import 'components/social-menu';
 @import 'components/leftside';
 @import 'components/panels';
-//@import 'components/header';
+@import 'components/menus';
+@import 'components/buttons';
 //@import 'components/footer';
 
 // Plugin Overrides
