--- a/assets/scss/components/_menus.scss
+++ b/assets/scss/components/_menus.scss
@@ -1,8 +1,9 @@
 .menu-primary-menu-container {
+	text-align: center;
 	
 	ul {
 		list-style: none;
-		margin: 0;
+		margin: 0 auto;
 		padding: 0;
 		text-align: center;
 		}
@@ -11,12 +12,25 @@
 		margin: 0 10px;
 		padding: 0;
 		display: inline-block;
+		text-align: center;
 		
-		a {
+		a, a:visited {
 			display: block;
 			padding: 10px 20px;
 			text-decoration: none;
+			color: $lime;
+			cursor: pointer;
+			transition: all .2s ease-in;
+			font-weight: bold;
+			font-family: $roboto;
+			text-transform: uppercase;
 		}
+		
+		a:hover {
+			color: #fff;
+		}
+		
+		
 	}
 
 }
