--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,11 +1,59 @@
-.home_hero {
-	background: $charcoal-bg;
-	display: block;
-	position: relative;
-	z-index: -2;
-	top: -100px;
-	
-	.hero-content {
-		padding: 500px 10%;
-	}
+body.home header {
+	height: 50px;
+	z-index: 99;
+}
+
+// Home vdeo hero. 100% screen size.
+
+.home--video{
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  top: -50px;
+  overflow: hidden;
+  video{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: $charcoal-bg;
+    background-size: cover;
+    transition: .2s opacity;
+      &:before{
+        content: '';
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: $charcoal-bg;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+      }
+  }
+  .home--overlay{
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover !important;
+    div{
+      flex: 0 1 auto;
+    }
+  }
+} // end home--video
+
+// Intro
+.home--intros {
+	padding: 50px inherit;
 }
