--- a/assets/scss/globals/_typography.scss
+++ b/assets/scss/globals/_typography.scss
@@ -14,10 +14,62 @@ a:visited {
 	color: $lime;
 }
 
-
+p {
+	font-size: 16px;
+}
 
 
 h2 {
 	font-size: 3em;
 	text-transform: uppercase;
+}
+
+
+//Universal Gltch out some text
+// Requires use of "data-text"
+
+.glitch{
+  position:relative;
+  //margin:0 auto;
+}
+@keyframes noise-anim{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(100)+px,9999px,random(100)+px,0);
+    }
+  }
+}
+.glitch:after{
+  content:attr(data-text);
+  position:absolute;
+  left:2px;
+  text-shadow:-1px 0 magenta;
+  top:0;
+  color:white;
+  background:black;
+  overflow:hidden;
+  clip:rect(0,900px,0,0); 
+  animation:noise-anim 2s infinite linear alternate-reverse;
+}
+
+@keyframes noise-anim-2{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(100)+px,9999px,random(100)+px,0);
+    }
+  }
+}
+.glitch:before{
+  content:attr(data-text);
+  position:absolute;
+  left:-2px;
+  text-shadow:1px 0 lime; 
+  top:0;
+  color:white;
+  background:magenta;
+  overflow:hidden;
+  clip:rect(0,900px,0,0); 
+  animation:noise-anim-2 3s infinite linear alternate-reverse;
 }
