Footer and header clean ups

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -29,6 +29,8 @@
 @import 'globals/global';
 @import 'globals/wordpress';
 @import 'globals/typography';
+@import 'globals/header';
+@import 'globals/footer';
 
 // Components
 @import 'components/social-menu';
