--- a/assets/scss/globals/_typography.scss
+++ b/assets/scss/globals/_typography.scss
@@ -14,14 +14,26 @@ a:visited {
 	color: $lime;
 }
 
-p {
-	font-size: 16px;
+
+
+h1 {
+	font-size: 3em;
+	text-transform: uppercase;
 }
 
 
 h2 {
-	font-size: 3em;
+	font-size: 2em;
 	text-transform: uppercase;
+}
+
+h3 {
+	font-size: 1.25em;
+	text-transform: uppercase;
+}
+
+p {
+	font-size: 16px;
 }
 
 
