--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -12,7 +12,21 @@ $charcoal-bg: $charcoal url(../images/bg_dark.jpg) no-repeat fixed;
 // Fonts
 $roboto: 'Roboto Condensed';
 
-
-
 // Animations
 $smooth: all .2s ease-in;
+
+// Breakpoints
+// -----------------------------------------------------------------------------
+$breakpoints: (
+  small: 0,
+  medium: 40em, // 640px
+  large: 64em, // 1024px
+  xlarge: 75em, // 1200px
+  xxlarge: 90em // 1440px
+);
+
+$small: map-get($breakpoints, small);
+$medium: map-get($breakpoints, medium);
+$large: map-get($breakpoints, large);
+$xlarge: map-get($breakpoints, xlarge);
+$xxlarge: map-get($breakpoints, xxlarge);
