--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -40,6 +40,7 @@
 @import 'components/menus';
 @import 'components/buttons';
 @import 'components/hero';
+@import 'components/newsletter';
 
 // Plugin Overrides
 @import 'plugins/overrides';
