Sponsor and home intro clean up yo

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -41,6 +41,7 @@
 @import 'components/buttons';
 @import 'components/hero';
 @import 'components/newsletter';
+@import 'components/sponsors';
 
 // Plugin Overrides
 @import 'plugins/overrides';
