--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -11,6 +11,8 @@ $limebg: $lime url(../images/bg_lime.jpg);
 $charcoal: #323031;
 $charcoal-bg: $charcoal url(../images/bg_dark.jpg);
 
+$white-bg: #eee url(../images/bg_white.jpg);
+
 // Fonts
 $roboto: 'Roboto Condensed';
 
