Sponsor page dev out

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,3 +1,7 @@
+.about_intro {
+	padding: 75px 0;
+}
+
 .past_speakers {
 	background: $charcoal-bg;
 	color: #fff;
@@ -22,6 +26,8 @@
 }
 
 .meet_team {
+	padding: 75px 0;
+	
 	p{
 		text-align: center;
 		}
