Vol opps and contact forms

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -42,6 +42,7 @@
 @import 'components/hero';
 @import 'components/newsletter';
 @import 'components/sponsors';
+@import 'components/forms';
 
 // Plugin Overrides
 @import 'plugins/overrides';
