Wrap up for a quick deploy.

--- a/assets/scss/pages/_conf.scss
+++ b/assets/scss/pages/_conf.scss
@@ -8,8 +8,10 @@
 }
 .speakerthumb {
 	.profilepic img{
+/*
 		-webkit-filter: grayscale(1);
 		filter: grayscale(1);
+*/
 		opacity: 0.55;
 		transition: $smooth;
 	}
