--- a/assets/scss/components/_menus.scss
+++ b/assets/scss/components/_menus.scss
@@ -34,3 +34,76 @@
 	}
 
 }
+	
+
+
+#nifty-nav-toggle {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: none;
+    position: absolute;
+    transition: all .3s ease;
+    top: 0;
+    right: 0;
+}
+
+#nifty-nav-toggle span{
+    cursor: pointer;
+    border-radius: 1px;
+    height: 3px;
+    width: 30px;
+    background: #fff;
+    position: absolute;
+    top: 31px;
+    right: 20px;
+    display: block;
+    content: '';
+}
+
+#nifty-nav-toggle span:before {
+    top: -8px;
+    right: 0;
+}
+
+#nifty-nav-toggle span:after {
+    bottom: -8px;
+    top: 8px;
+    right: 0;
+}
+
+// Nifty Panel Styles
+.nifty-panel{
+	left: 0;
+	width: 100%;
+	background: rgba($charcoal, 0.9);
+	overflow: hidden;
+	
+	a.button {
+		width: 80%;
+		margin: 20px auto;
+		display: block;
+		float: none;
+		text-align: center;
+	}
+	ul{
+		list-style: none;
+		margin: 20px 0;
+		padding: 0;
+		width: 100%;
+		li{
+			width: 100%;
+			margin: 0;
+			position: relative;
+			&:hover{
+				background: rgba($lime, 0.9);
+			}
+			a{
+				display: block;
+				padding: 8px 15px;
+				text-transform: uppercase;
+				color: white;
+			}
+		}
+	}
+}
