--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -25,6 +25,10 @@
 @import 'settings';
 @import 'ginger';
 
+// Import Nifty-Nav
+@import 'settings/niftynavsettings';
+@import 'settings/nifty-nav';
+
 
 // Global Styles
 @import 'globals/global';
