--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -57,7 +57,7 @@ body.home header {
   
 } // end home--video
 
-@include max-screen($medium) {
+@include max-screen($large) {
 	
 	.home--video{ 
 		
