--- a/assets/scss/components/_menus.scss
+++ b/assets/scss/components/_menus.scss
@@ -35,7 +35,9 @@
 
 }
 
-.md-hide-up {display: none;}
+@include min-screen($large) {
+	.md-hide-up {display: none;}
+}
 
 
 	
@@ -45,7 +47,7 @@
 
 
 #nifty-nav-toggle {
-    width: 100%;
+    width: 80px;
     height: 100%;
     display: block;
     background: none;
@@ -53,6 +55,7 @@
     transition: all .3s ease;
     top: 37px;
     right: 20px;
+    left: auto;
 }
 
 #nifty-nav-toggle span{
@@ -63,7 +66,8 @@
     background: #fff;
     position: absolute;
     top: 31px;
-    right: 40px;
+    right: 0px;
+    left: auto;
     display: block;
     content: '';
 }
