--- a/assets/scss/pages/_sponsor.scss
+++ b/assets/scss/pages/_sponsor.scss
@@ -8,7 +8,7 @@
 .levels ul.sponsor--tiers {
 	margin: 0;
 	padding: 0;
-	list-style: none;
+	list-style: square;
 	
 	li {
 		width: 48%;
@@ -18,6 +18,7 @@
 		padding: 20px;
 		
 		.vol_description .button {display: none;}
+		
 	}
 	
 	li:nth-child(2n+1) {
@@ -29,6 +30,20 @@
 		display: block;
 		content: '';
 	}
+	
+	.vol_description ul {
+		width: 90%;
+		margin: 0;
+		padding: 0;
+		list-style: square !important;
+	}
+	.vol_description li {
+			margin: 0px 0px 10px 10px;
+			padding: 5px;
+			list-style: square;
+			width: 45%;
+			display: inline-block;
+		}
 }
 
 .home-sponsor  {
@@ -40,4 +55,33 @@
 		color: #fff;
 		border-color:$lime;
 	}
+}
+
+
+
+@include max-screen($medium) {
+	
+	.levels ul.sponsor--tiers {
+	margin: 0;
+	padding: 0;
+	list-style: square;
+	
+	li {
+		width: 100%;
+		float: left;
+		display: block;
+		margin: 0;
+		padding: 20px;
+		
+		.vol_description .button {display: none;}
+		
+		.vol_description li {
+			width: 100%;
+		}
+		
+		
+		}
+	}
+	
+	
 }
