Major events push!

--- a/assets/scss/settings/_variables.scss
+++ b/assets/scss/settings/_variables.scss
@@ -8,9 +8,11 @@
 $lime: #aacf38;
 $limebg: $lime url(../images/bg_lime.jpg);
 
+
 $charcoal: #323031;
 $charcoal-bg: $charcoal url(../images/bg_dark.jpg);
 
+$grey: #ccc;
 $white-bg: #eee url(../images/bg_white.jpg);
 
 // Fonts
