--- a/assets/scss/pages/_speakers.scss
+++ b/assets/scss/pages/_speakers.scss
@@ -24,6 +24,9 @@
 
 .f1_mentor_details_social_container {
 	text-align: center;
+	margin-top: 25px;
+	
+	h3 {display: inline-block;}
 	
 	a {
 		font-size: 40px;
