--- a/assets/scss/globals/_header.scss
+++ b/assets/scss/globals/_header.scss
@@ -27,6 +27,19 @@ header {
 	.menu-primary-menu-container ul {
 					
 			li {position: relative}
+			
+			li.menu-item-has-children {
+				padding-right: 10px;
+			}
+			
+			li.menu-item-has-children:after {
+				position: absolute;
+				color: #fff;
+				top: 10px;
+				right: 0px;
+				font-family: FontAwesome;
+				content:"\f0d7";
+			}
 
 			
 			li ul {display: none;}
@@ -34,7 +47,7 @@ header {
 			
 			li:hover ul{
 				display: block;
-				width: 200px;
+				width: 180px;
 				position: absolute;
 				top: 0px;
 				padding-top: 40px;
@@ -50,9 +63,17 @@ header {
 						border-top: 1px solid $lime;
 					}
 					
+					&:hover {
+						background: #000;
+					}
+					
 					a {
 						display: block;
-						padding: 15px 10px;
+						color: #fff;
+						font-size: 12px;
+						padding: 15px 20px;
+						
+						&:hover {color: #fff;}
 					}
 				}
 				
@@ -70,7 +91,7 @@ header {
 			
 			li:last-child a {
 				margin-right: 0;
-				padding-right: 0px;
+				padding-right: 5px;
 			}
 			
 		}
