--- a/assets/scss/components/_menus.scss
+++ b/assets/scss/components/_menus.scss
@@ -1,19 +1,19 @@
 .menu-primary-menu-container {
 	text-align: center;
-	
+
 	ul {
 		list-style: none;
 		margin: 0 auto;
 		padding: 0;
 		text-align: center;
 		}
-		
+
 	li {
 		margin: 0 10px;
 		padding: 0;
 		display: inline-block;
 		text-align: center;
-		
+
 		a, a:visited {
 			display: block;
 			padding: 10px 20px;
@@ -25,12 +25,12 @@
 			font-family: $roboto;
 			text-transform: uppercase;
 		}
-		
+
 		a:hover {
 			color: #fff;
 		}
-		
-		
+
+
 	}
 
 }
@@ -40,7 +40,7 @@
 }
 
 
-	
+
 .niftyburger {
 	height: 75px;
 }
@@ -93,7 +93,7 @@
 	background: rgba($charcoal, 0.95);
 	overflow: hidden;
 	display: none;
-	
+
 	a.button {
 		width: 80%;
 		margin: 20px auto;
@@ -101,9 +101,22 @@
 		float: none;
 		text-align: center;
 	}
+
+	.menu-primary-menu-container ul {
+		li:hover ul{
+			display: none;
+			position: static;
+			width: 100%;
+			padding-top: 0;
+		}
+		li ul {
+			display: none;
+		}
+	}
+
 	ul{
 		list-style: none;
-		margin: 20px 0;
+		margin: 0 0 1px 0;
 		padding: 0;
 		width: 100%;
 		li{
