global alert bar built with delay timer

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -34,6 +34,7 @@
 @import 'globals/global';
 @import 'globals/wordpress';
 @import 'globals/typography';
+@import 'globals/alert';
 @import 'globals/header';
 @import 'globals/footer';
 
