--- a/assets/scss/globals/_alert.scss
+++ b/assets/scss/globals/_alert.scss
@@ -6,6 +6,14 @@
   top: 0;
   width: 100%;
   a {
-    margin: 0 rem(20);
+    margin: 0 0 0 rem(30);
   }
+}
+
+.alert-message {
+  font-size:30px;
+  margin: 1em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
